--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://placeimg.com/640/480/tech" class="d-block w-100" alt="...">
+                    <img src="https://placeimg.com/1000/250/tech" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://placeimg.com/640/480/people" class="d-block w-100" alt="...">
+                    <img src="https://placeimg.com/1000/250/people" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://placeimg.com/640/480/animals" class="d-block w-100" alt="...">
+                    <img src="https://placeimg.com/1000/250/animals" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -61,12 +61,7 @@
               </div>              
     
     <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-            </div>
-        </div>
-
-        <div class="row bg-white m-3 p-3">
+        <div class="row bg-white my-3 p-3">
                 <div class="col">
                     <i class="far fa-credit-card"></i>
                     Tarjeta de crédito
@@ -90,6 +85,62 @@
                     Tarjeta de crédito
                     Ver promociones bancarias
                 </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 mb-3">
+                <span class="h3 font-weight-light">Las mejores tiendas te esperan</span>
+                <a href="#">Ver tiendas</a>
+            </div>
+
+            <div class="col-3">
+                <div class="card mb-3">
+                    <img src="https://placeimg.com/500/250/tech" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card mb-3">
+                    <img src="https://placeimg.com/500/250/tech" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card mb-3">
+                    <img src="https://placeimg.com/500/250/tech" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3">
+                <div class="card mb-3">
+                    <img src="https://placeimg.com/500/250/tech" class="card-img-top" alt="...">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Card title</h5>
+
+                        <div class="mb-3">
+                            <img src="https://placeimg.com/50/50/tech" alt="..." class="img-thumbnail">
+                            <img src="https://placeimg.com/50/50/tech" alt="..." class="img-thumbnail">
+                            <img src="https://placeimg.com/50/50/tech" alt="..." class="img-thumbnail">
+                        </div>
+
+                        <button class="btn btn-primary btn-sm">Ver tienda</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
